feat: add applications api
